--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<meta charset="UTF-8">
 	<title>angularApp</title>
 	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
 </head>
 <body>
 	
 	<p>Starting right {{'now' + '!'}}</p>
+	<p>25 times 6 = {{25 * 6}}</p>
 	
 </body>
 </html>
