Revert "added controller.js and ng coding in index"
This reverts commit e29bc2c3cf57c207a722c025d478a4ca6e3b7946.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en" ng-app>
 <head>
 	<meta charset="UTF-8">
 	<title>angularApp</title>
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-	<script src="js/controllers.js"></script>
 </head>
-<body ng-controller="PhoneListCtrl">
+<body>
 	
-	<ul>
-		<li ng-repeat="phone in phones">
-			<span>{{phone.name}}</span>
-			<p>{{phone.snippet}}</p>
-		</li>
-	</ul>
+	<p>Starting right {{'now' + '!'}}</p>
+	<p>25 times 6 = {{25 * 6}}</p>
 	
 </body>
 </html>
