Added Sort feature for it..

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 		<br>
 		<br>
 		search: <input ng-model="query">
+		
+		Sort By: 
+		<select ng-model="orderProp">
+			<option value="name">Alphabetical</option>
+			<option value="new">Newest</option>	
+		</select>
 	</ul>
 </body>
 </html>
